--- a/webapp.ipynb
+++ b/webapp.ipynb
@@ -92,19 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7ce65a11-98a2-4145-8774-04f4511406ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c12c90df505f4a02aa73105ca0659987",
+       "model_id": "6a944debd5d1482da743ec31987af9c3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Select your bear!'), FileUpload(value={}, description='Upload'), Output(), Label(v…"
+       "VBox(children=(Label(value='Rock Paper Scissors!'), FileUpload(value={}, description='Upload'), Output(), Labe…"
       ]
      },
      "metadata": {},
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "display(VBox([widgets.Label('Select your bear!'), btn_upload, out_pl, lbl_pred]))"
+    "display(VBox([widgets.Label('Rock Paper Scissors!'), btn_upload, out_pl, lbl_pred]))"
    ]
   }
  ],
